# cmake-learning

./: .gitignore
01_basic/A_hello_cmake/: CMakeLists.txt
01_basic/B_hello_headers/: CMakeLists.txt
01_basic/D_shared_library/: CMakeLists.txt
01_basic/E_installing/my_printf/src/: my_printf.c
01_basic/F_build_type/: CMakeLists.txt
01basic/A_hello_cmake/: main.c
01basic/B_hello_headers/inc/: my_printf.h
01basic/B_hello_headers/src/: my_printf.c
01basic/C_static_library/: CMakeLists.txt
01basic/G_compile_flags/: CMakeLists.txt
01basic/H_third-party-library/: CMakeLists.txt
01basic/H_third-party-library/main/: main.c
01basic/H_third-party-library/my_printf/src/: my_printf.c
01basic/H_third_party_library/my_printf/inc/: my_printf.h
01basic/I_compiling_with_clang/: CMakeLists.txt
01basic/hello_cmake/: CMakeLists.txt  main.c
01basic/hello_headers/: CMakeLists.txt
01basic/hello_headers/inc/: my_printf.h
01basic/hello_headers/src/: main.c  my_printf.c
01basic/installing/: CMakeLists.txt
02_sub_project/A_basic/: CMakeLists.txt
02_sub_project/A_basic/my_printf/: CMakeLists.txt
02subproject/A_basic/main/: CMakeLists.txt
03_code_generation/A_basic/main/: CMakeLists.txt
03_code_generation/A_basic/main/inc/: main.h.in
03_code_generation/A_basic/main/src/: main.c
